tests/ui/traits/const-traits/inherent-impl-stability.stderr
error: `staged_api::Unstable::inherent_func` is not yet stable as a const fn
  --> $DIR/inherent-impl-stability.rs:12:5
   |
LL |     Unstable::inherent_func();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
help: add `#![feature(unstable)]` to the crate attributes to enable
   |
LL + #![feature(unstable)]
   |

error: aborting due to 1 previous error

